fix folder structure

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,11 @@ jobs:
         echo "Add README to docs/"
         asciidoctor README.adoc -o docs/index.html
         echo "Add supermodel to docs/"
-        asciidoctor supermodel.adoc -o docs/supermodel.html
+        asciidoctor document/supermodel.adoc -o docs/supermodel.html
         echo "Add supermodel RDF to docs/"
         cp *.ttl docs/
         echo "Add images to docs/"
-        cp -r images docs/
+        cp -r document/images docs/
         echo "Backbone Model"
         mkdir docs/backbone
         cp backbone/model.ttl docs/backbone/model.ttl
